# marx-os

./: .gitignore  Cargo.toml  LICENSE  README.md  run-fast.bat  run.bat  rust-toolchain.toml
.cargo/: config.toml
apps/calculator/: Cargo.toml
apps/calculator/src/: main.rs
apps/hello/: Cargo.toml
apps/hello/src/: main.rs
kernel/: Cargo.toml  build.rs
kernel/src/: allocator.rs  app.rs  app_wm.rs  ata.rs  button.rs  cursor.rs  desktop.rs  elf.rs  font.rs  framebuffer.rs  fs.rs  gdt.rs  input.rs  interrupts.rs  main.rs  memory.rs  mouse.rs  serial.rs  shell.rs  splash.rs  task.rs  ttf.rs  wallpaper.rs  welcome.rs
runner/: Cargo.toml  build.rs
runner/assets/disk/: readme.md  welcome.txt
runner/src/: main.rs
scripts/: build.ps1
sdk/: Cargo.toml
sdk/src/: lib.rs
